[package]
name = "example_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
rbenchmark = { path = "../" }

[profile.release]
opt-level = 3
lto = 'fat'
debug = true
codegen-units = 1
panic = "abort"
